{
  "version": 4,
  "terraform_version": "0.12.3",
  "serial": 41,
  "lineage": "048c6437-fe8c-389f-9648-0e6c154a6d19",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "deploy1",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e65ce201-f8c1-4485-8016-5b9a171dad0c/resourceGroups/first-rg/providers/Microsoft.Network/networkSecurityGroups/NSG1",
            "location": "westus",
            "name": "NSG1",
            "resource_group_name": "first-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "",
                "destination_address_prefixes": [
                  "10.0.1.0/24"
                ],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "22",
                  "3389"
                ],
                "direction": "Inbound",
                "name": "SSHandRDP-to-WEB",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "10.0.5.0/24"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "",
                "destination_address_prefixes": [
                  "10.0.1.0/24"
                ],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "443",
                  "80"
                ],
                "direction": "Inbound",
                "name": "HTTPorHTTPS-request",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "",
                "destination_address_prefixes": [
                  "10.0.1.0/24"
                ],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8081",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "API-Web-response",
                "priority": 120,
                "protocol": "Tcp",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "10.0.2.0/24"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "8083",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "",
                "destination_address_prefixes": [
                  "10.0.2.0/24"
                ],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8083",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "Web-API-request",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "10.0.1.0/24"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "8081",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "",
                "destination_address_prefixes": [
                  "10.0.3.0/24"
                ],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "DenyOutBoundToDB",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "10.0.1.0/24"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {}
          },
          "depends_on": [
            "azurerm_resource_group.deploy"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "deploy2",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e65ce201-f8c1-4485-8016-5b9a171dad0c/resourceGroups/first-rg/providers/Microsoft.Network/networkSecurityGroups/NSG2",
            "location": "westus",
            "name": "NSG2",
            "resource_group_name": "first-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "",
                "destination_address_prefixes": [
                  "10.0.1.0/24"
                ],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8081",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "API-Web-response",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "10.0.2.0/24"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "8083",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "",
                "destination_address_prefixes": [
                  "10.0.2.0/24"
                ],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "22",
                  "3389"
                ],
                "direction": "Inbound",
                "name": "SSHandRDP-to-API",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "10.0.5.0/24"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "",
                "destination_address_prefixes": [
                  "10.0.2.0/24"
                ],
                "destination_application_security_group_ids": [],
                "destination_port_range": "21",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "FTPfromDB-to-API",
                "priority": 120,
                "protocol": "Tcp",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "10.0.3.0/24"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "",
                "destination_address_prefixes": [
                  "10.0.2.0/24"
                ],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8083",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Web-request-API",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "10.0.1.0/24"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "8081",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "",
                "destination_address_prefixes": [
                  "10.0.3.0/24"
                ],
                "destination_application_security_group_ids": [],
                "destination_port_range": "21",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "FTPtoDB",
                "priority": 120,
                "protocol": "Tcp",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "10.0.2.0/24"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "",
                "destination_address_prefixes": [
                  "10.0.3.0/24"
                ],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3306",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "API-MySQL-request",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "10.0.2.0/24"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "118",
                "source_port_ranges": []
              }
            ],
            "tags": {}
          },
          "depends_on": [
            "azurerm_resource_group.deploy"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "deploy3",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e65ce201-f8c1-4485-8016-5b9a171dad0c/resourceGroups/first-rg/providers/Microsoft.Network/networkSecurityGroups/NSG2",
            "location": "westus",
            "name": "NSG2",
            "resource_group_name": "first-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "",
                "destination_address_prefixes": [
                  "10.0.2.0/24"
                ],
                "destination_application_security_group_ids": [],
                "destination_port_range": "118",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "MySQL-API--request",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "10.0.3.0/24"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "3306",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "",
                "destination_address_prefixes": [
                  "10.0.2.0/24"
                ],
                "destination_application_security_group_ids": [],
                "destination_port_range": "21",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "FTPfromDB-API-Outbound",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "10.0.3.0/24"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "",
                "destination_address_prefixes": [
                  "10.0.3.0/24"
                ],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "22",
                  "3389"
                ],
                "direction": "Inbound",
                "name": "SSHandRDP-from-admin-to-db",
                "priority": 120,
                "protocol": "Tcp",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "10.0.5.0/24"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "",
                "destination_address_prefixes": [
                  "10.0.3.0/24"
                ],
                "destination_application_security_group_ids": [],
                "destination_port_range": "21",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "FTPfromAPI-DB-Inbound",
                "priority": 130,
                "protocol": "Tcp",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "10.0.2.0/24"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "",
                "destination_address_prefixes": [
                  "10.0.3.0/24"
                ],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3306",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "API-DB-request",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "10.0.2.0/24"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "118",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "",
                "destination_address_prefixes": [
                  "10.0.1.0/24"
                ],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "DenyConnectiontToWeb",
                "priority": 120,
                "protocol": "Tcp",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "10.0.3.0/24"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "",
                "destination_address_prefixes": [
                  "10.0.3.0/24"
                ],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "DenyWeb-Database",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "10.0.1.0/24"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {}
          },
          "depends_on": [
            "azurerm_resource_group.deploy"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "deploy4",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e65ce201-f8c1-4485-8016-5b9a171dad0c/resourceGroups/first-rg-replica/providers/Microsoft.Network/networkSecurityGroups/NSG1-replica",
            "location": "eastus",
            "name": "NSG1-replica",
            "resource_group_name": "first-rg-replica",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "",
                "destination_address_prefixes": [
                  "20.0.1.0/24"
                ],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "22",
                  "3389"
                ],
                "direction": "Inbound",
                "name": "SSHandRDP-to-WEB",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "20.0.5.0/24"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "",
                "destination_address_prefixes": [
                  "20.0.1.0/24"
                ],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "443",
                  "80"
                ],
                "direction": "Inbound",
                "name": "HTTPorHTTPS-request",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "",
                "destination_address_prefixes": [
                  "20.0.1.0/24"
                ],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8081",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "API-Web-response",
                "priority": 120,
                "protocol": "Tcp",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "20.0.2.0/24"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "8083",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "",
                "destination_address_prefixes": [
                  "20.0.2.0/24"
                ],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8083",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "Web-API-request",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "20.0.1.0/24"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "8081",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "",
                "destination_address_prefixes": [
                  "20.0.3.0/24"
                ],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "DenyOutBoundToDB",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "20.0.1.0/24"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {}
          },
          "depends_on": [
            "azurerm_resource_group.deploy-replica"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "deploy5",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e65ce201-f8c1-4485-8016-5b9a171dad0c/resourceGroups/first-rg-replica/providers/Microsoft.Network/networkSecurityGroups/NSG2-replica",
            "location": "eastus",
            "name": "NSG2-replica",
            "resource_group_name": "first-rg-replica",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "",
                "destination_address_prefixes": [
                  "20.0.1.0/24"
                ],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8081",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "API-Web-response",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "20.0.2.0/24"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "8083",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "",
                "destination_address_prefixes": [
                  "20.0.2.0/24"
                ],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "22",
                  "3389"
                ],
                "direction": "Inbound",
                "name": "SSHandRDP-to-API",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "20.0.5.0/24"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "",
                "destination_address_prefixes": [
                  "20.0.2.0/24"
                ],
                "destination_application_security_group_ids": [],
                "destination_port_range": "21",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "FTPfromDB-to-API",
                "priority": 120,
                "protocol": "Tcp",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "20.0.3.0/24"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "",
                "destination_address_prefixes": [
                  "20.0.2.0/24"
                ],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8083",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Web-request-API",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "20.0.1.0/24"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "8081",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "",
                "destination_address_prefixes": [
                  "20.0.3.0/24"
                ],
                "destination_application_security_group_ids": [],
                "destination_port_range": "21",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "FTPtoDB",
                "priority": 120,
                "protocol": "Tcp",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "20.0.2.0/24"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "",
                "destination_address_prefixes": [
                  "20.0.3.0/24"
                ],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3306",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "API-MySQL-request",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "20.0.2.0/24"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "118",
                "source_port_ranges": []
              }
            ],
            "tags": {}
          },
          "depends_on": [
            "azurerm_resource_group.deploy-replica"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "deploy6",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e65ce201-f8c1-4485-8016-5b9a171dad0c/resourceGroups/first-rg-replica/providers/Microsoft.Network/networkSecurityGroups/NSG3-replica",
            "location": "eastus",
            "name": "NSG3-replica",
            "resource_group_name": "first-rg-replica",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "",
                "destination_address_prefixes": [
                  "20.0.2.0/24"
                ],
                "destination_application_security_group_ids": [],
                "destination_port_range": "118",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "MySQL-API--request",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "20.0.3.0/24"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "3306",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "",
                "destination_address_prefixes": [
                  "20.0.2.0/24"
                ],
                "destination_application_security_group_ids": [],
                "destination_port_range": "21",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "FTPfromDB-API-Outbound",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "20.0.3.0/24"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "",
                "destination_address_prefixes": [
                  "20.0.3.0/24"
                ],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "22",
                  "3389"
                ],
                "direction": "Inbound",
                "name": "SSHandRDP-from-admin-to-db",
                "priority": 120,
                "protocol": "Tcp",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "20.0.5.0/24"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "",
                "destination_address_prefixes": [
                  "20.0.3.0/24"
                ],
                "destination_application_security_group_ids": [],
                "destination_port_range": "21",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "FTPfromAPI-DB-Inbound",
                "priority": 130,
                "protocol": "Tcp",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "20.0.2.0/24"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "",
                "destination_address_prefixes": [
                  "20.0.3.0/24"
                ],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3306",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "API-DB-request",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "20.0.2.0/24"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "118",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "",
                "destination_address_prefixes": [
                  "20.0.1.0/24"
                ],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "DenyConnectiontToWeb",
                "priority": 120,
                "protocol": "Tcp",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "20.0.3.0/24"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "",
                "destination_address_prefixes": [
                  "20.0.3.0/24"
                ],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "DenyWeb-Database",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "20.0.1.0/24"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {}
          },
          "depends_on": [
            "azurerm_resource_group.deploy-replica"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "deploy",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "id": "/subscriptions/e65ce201-f8c1-4485-8016-5b9a171dad0c/resourceGroups/first-rg/providers/Microsoft.Network/virtualNetworks/first-vnet",
            "location": "westus",
            "name": "first-vnet",
            "resource_group_name": "first-rg",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/e65ce201-f8c1-4485-8016-5b9a171dad0c/resourceGroups/first-rg/providers/Microsoft.Network/virtualNetworks/first-vnet/subnets/subnet1",
                "name": "subnet1",
                "security_group": "/subscriptions/e65ce201-f8c1-4485-8016-5b9a171dad0c/resourceGroups/first-rg/providers/Microsoft.Network/networkSecurityGroups/NSG1"
              },
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/e65ce201-f8c1-4485-8016-5b9a171dad0c/resourceGroups/first-rg/providers/Microsoft.Network/virtualNetworks/first-vnet/subnets/subnet2",
                "name": "subnet2",
                "security_group": "/subscriptions/e65ce201-f8c1-4485-8016-5b9a171dad0c/resourceGroups/first-rg/providers/Microsoft.Network/networkSecurityGroups/NSG2"
              },
              {
                "address_prefix": "10.0.3.0/24",
                "id": "/subscriptions/e65ce201-f8c1-4485-8016-5b9a171dad0c/resourceGroups/first-rg/providers/Microsoft.Network/virtualNetworks/first-vnet/subnets/subnet3",
                "name": "subnet3",
                "security_group": "/subscriptions/e65ce201-f8c1-4485-8016-5b9a171dad0c/resourceGroups/first-rg/providers/Microsoft.Network/networkSecurityGroups/NSG2"
              },
              {
                "address_prefix": "10.0.4.0/24",
                "id": "/subscriptions/e65ce201-f8c1-4485-8016-5b9a171dad0c/resourceGroups/first-rg/providers/Microsoft.Network/virtualNetworks/first-vnet/subnets/AzureFirewallSubnet",
                "name": "AzureFirewallSubnet"
              },
              {
                "address_prefix": "10.0.5.0/24",
                "id": "/subscriptions/e65ce201-f8c1-4485-8016-5b9a171dad0c/resourceGroups/first-rg/providers/Microsoft.Network/virtualNetworks/first-vnet/subnets/admin-1",
                "name": "admin-1"
              }
            ]
          },
          "depends_on": [
            "azurerm_network_security_group.deploy1",
            "azurerm_network_security_group.deploy2",
            "azurerm_network_security_group.deploy3",
            "azurerm_resource_group.deploy"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "deploy-replica",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "20.0.0.0/16"
            ],
            "id": "/subscriptions/e65ce201-f8c1-4485-8016-5b9a171dad0c/resourceGroups/first-rg-replica/providers/Microsoft.Network/virtualNetworks/first-vnet-replica",
            "location": "eastus",
            "name": "first-vnet-replica",
            "resource_group_name": "first-rg-replica",
            "subnet": [
              {
                "address_prefix": "20.0.1.0/24",
                "id": "/subscriptions/e65ce201-f8c1-4485-8016-5b9a171dad0c/resourceGroups/first-rg-replica/providers/Microsoft.Network/virtualNetworks/first-vnet-replica/subnets/subnet1-replica",
                "name": "subnet1-replica",
                "security_group": "/subscriptions/e65ce201-f8c1-4485-8016-5b9a171dad0c/resourceGroups/first-rg-replica/providers/Microsoft.Network/networkSecurityGroups/NSG1-replica"
              },
              {
                "address_prefix": "20.0.2.0/24",
                "id": "/subscriptions/e65ce201-f8c1-4485-8016-5b9a171dad0c/resourceGroups/first-rg-replica/providers/Microsoft.Network/virtualNetworks/first-vnet-replica/subnets/subnet2-replica",
                "name": "subnet2-replica",
                "security_group": "/subscriptions/e65ce201-f8c1-4485-8016-5b9a171dad0c/resourceGroups/first-rg-replica/providers/Microsoft.Network/networkSecurityGroups/NSG2-replica"
              },
              {
                "address_prefix": "20.0.3.0/24",
                "id": "/subscriptions/e65ce201-f8c1-4485-8016-5b9a171dad0c/resourceGroups/first-rg-replica/providers/Microsoft.Network/virtualNetworks/first-vnet-replica/subnets/subnet3-replica",
                "name": "subnet3-replica",
                "security_group": "/subscriptions/e65ce201-f8c1-4485-8016-5b9a171dad0c/resourceGroups/first-rg-replica/providers/Microsoft.Network/networkSecurityGroups/NSG3-replica"
              },
              {
                "address_prefix": "20.0.4.0/24",
                "id": "/subscriptions/e65ce201-f8c1-4485-8016-5b9a171dad0c/resourceGroups/first-rg-replica/providers/Microsoft.Network/virtualNetworks/first-vnet-replica/subnets/AzureFirewallSubnet",
                "name": "AzureFirewallSubnet"
              },
              {
                "address_prefix": "20.0.5.0/24",
                "id": "/subscriptions/e65ce201-f8c1-4485-8016-5b9a171dad0c/resourceGroups/first-rg-replica/providers/Microsoft.Network/virtualNetworks/first-vnet-replica/subnets/admin-replica",
                "name": "admin-replica"
              }
            ]
          },
          "depends_on": [
            "azurerm_network_security_group.deploy4",
            "azurerm_network_security_group.deploy5",
            "azurerm_network_security_group.deploy6",
            "azurerm_resource_group.deploy-replica"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "Peering1",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/e65ce201-f8c1-4485-8016-5b9a171dad0c/resourceGroups/first-rg/providers/Microsoft.Network/virtualNetworks/first-vnet/virtualNetworkPeerings/Peering1to2",
            "name": "Peering1to2",
            "remote_virtual_network_id": "/subscriptions/e65ce201-f8c1-4485-8016-5b9a171dad0c/resourceGroups/first-rg-replica/providers/Microsoft.Network/virtualNetworks/first-vnet-replica",
            "resource_group_name": "first-rg",
            "use_remote_gateways": false,
            "virtual_network_name": "first-vnet"
          },
          "depends_on": [
            "azurerm_resource_group.deploy",
            "azurerm_virtual_network.deploy-replica"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "Peering2",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/e65ce201-f8c1-4485-8016-5b9a171dad0c/resourceGroups/first-rg-replica/providers/Microsoft.Network/virtualNetworks/first-vnet-replica/virtualNetworkPeerings/Peering2to1",
            "name": "Peering2to1",
            "remote_virtual_network_id": "/subscriptions/e65ce201-f8c1-4485-8016-5b9a171dad0c/resourceGroups/first-rg/providers/Microsoft.Network/virtualNetworks/first-vnet",
            "resource_group_name": "first-rg-replica",
            "use_remote_gateways": false,
            "virtual_network_name": "first-vnet-replica"
          },
          "depends_on": [
            "azurerm_resource_group.deploy-replica",
            "azurerm_virtual_network.deploy"
          ]
        }
      ]
    }
  ]
}